--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
   
   <div class="container" id="container">
-    <p class="titleC"><b>Alooo Kamuu! 🫣💗</b></p>
+    <p class="titleC"><b>Ecaaa! 🫣💗</b></p>
     <script>teksAnimasi = [
                     "Aku mau ngomong sesuatu yang udah cukup lama ku simpan. Aku suka sama kamuu. Aku enggak mau maksa apa apa cuma pengen jujur soal perasaan ku. Aku suka cara kamuu jadi diri sendiri kalo kamuu ngerasa hal yang sama. Aku seneng banget. Tapi kalo ga aku pengen tetep bisa saling ngobrol kaya biasa",
                     "<br><i>Dan inget ya</i>. Aku akan di sini sampai kamuu move on dan aku tetep disini",
@@ -98,3 +98,4 @@
 
 </body>
 </html>
+
