--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <div class="container" id="container">
     <p class="titleC"><b>Ecaaa! 🫣💗</b></p>
     <script>teksAnimasi = [
-                    "Aku mau ngomong sesuatu yang udah cukup lama ku simpan. Aku suka sama kamuu. Aku enggak mau maksa apa apa cuma pengen jujur soal perasaan ku. Aku suka cara kamuu jadi diri sendiri kalo kamuu ngerasa hal yang sama. Aku seneng banget. Tapi kalo ga aku pengen tetep bisa saling ngobrol kaya biasa",
-                    "<br><i>Dan inget ya</i>. Aku akan di sini sampai kamuu move on dan aku tetep disini",
+                    "Aku mau ngomong sesuatu yang udah cukup lama ku simpan. Aku suka sama kamuu. Bukan karena kamu manis atau cantik doang tapi karena kamu beda dari yang lain. Aku enggak mau maksa apa apa cuma pengen jujur soal perasaan ku, Dan anehnya, aku malah nyaman sama sikap kamu yang dingin itu. Kaya... gak di buat buat aja. Aku udah siap kalo respon kamu datar. Aku gak minta jawaban sekarang, akucuma pengen kamu tau aja. Dan aku akan tetep di sini.Aku tetap bakal jadi aku yang biasa, gak bakal berubah gara gara ini kok.",
+                    "<br><i></i>. Aku akan di sini sampai kamuu move on dan aku tetep disini",
 				    "<br><b>Terakhir,</b><br>Aku penegn kenal lebih jauh<br>samaa kamuu! 💐",
 				    "<br><i class='fontAlt'>I lovee youu</i> 🫢💗",
 				 ];
@@ -98,4 +98,5 @@
 
 </body>
 </html>
+
 
