--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="container" id="container">
     <p class="titleC"><b>Ecaaa! 🫣💗</b></p>
     <script>teksAnimasi = [
-                    "Aku mau ngomong sesuatu yang udah cukup lama ku simpan. Aku suka sama kamuu. Bukan karena kamu manis atau cantik doang tapi karena kamu beda dari yang lain. Gak tau juga.. tapi tiap kali chat sama kamu, rasanya tenang aja gitu.padahal kamu kadang cuek banget.Aku enggak mau maksa apa-apa cuma pengen jujur soal perasaan ku, Dan anehnya, aku malah nyaman sama sikap kamu yang dingin itu. Kaya... gak dibuat-buat aja. Aku udah siap kalo respon kamu datar. Aku gak minta jawaban sekarang, aku cuma pengen kamu tau aja. Dan aku akan tetep di sini.",
+                    "Aku mau ngomong sesuatu yang udah cukup lama ku simpan. Aku suka sama kamuu. Bukan karena kamu manis atau cantik doang tapi karena kamu beda dari yang lain. Gak tau juga.. tapi tiap kali chat sama kamu, rasanya tenang aja gitu.padahal kamu kadang cuek banget.Aku enggak mau maksa apa-apa cuma pengen jujur soal perasaan ku, Dan anehnya, aku malah nyaman sama sikap kamu yang dingin itu. Aku udah siap kalo respon kamu datar. Aku gak minta jawaban sekarang, aku cuma pengen kamu tau aja. Dan aku akan tetep di sini.",
                     "<br><i></i>",
 				    "<br><b>Aku tetap bakal jadi aku yang biasa, gak bakal berubah gara gara ini kok.,</b><br>",
 				    "<br><i class='fontAlt'>I lovee youu</i> 🫢💗",
@@ -98,6 +98,7 @@
 
 </body>
 </html>
+
 
 
 
